ZZ_arhived/apps/services/router-ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: router-svc
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
---
kind: Endpoints
apiVersion: v1
metadata:
  name: router-svc
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
  - secretName: san-gorilych-ru-tls
    hosts:
    - router.gorilych.ru
  rules:
    - host: router.gorilych.ru
      http:
        paths:
        - pathType: ImplementationSpecific
          backend:
            service:
              name: router-svc
              port:
                number: 443
